# HWM_PLDM

./: .gitignore  pyproject.toml  readme.md  requirements.txt
environments/diverse_ant/: ant_envs_generator.py  wrappers.py
environments/diverse_maze/: d4rl.py  enums.py  make_hjepa_videos.py  make_ogbench_videos.py  maze_draw.py  utils.py  wrappers.py
environments/ogbench/: dataset.py  utils.py
environments/ogbench_manispace/: dataset.py
environments/utils/: normalizer.py
environments/wall/: generate_data.py  render_images.py  save_wall_ds.py  test.py  wall.py
hjepa/: __init__.py  configs.py  diagnostics.py  eval_eigf_planning.py  requirements.txt  train.py  utils.py
hjepa/data/: dataset_factory.py  enums.py  utils.py
hjepa/evaluation/: evaluator.py
hjepa/models/: action_ae.py  decoders.py  hjepa.py  jepa.py  misc.py  predictors.py  utils.py
hjepa/objectives/: __init__.py  aae_probe.py  aae_probe_chunk.py  action_ae.py  idm.py  kl.py  laplacian.py  prediction.py  probe.py  reconstruction.py  vicreg.py
hjepa/optimizers/: optimizer_factory.py
hjepa/planning/: enums.py  mpc.py  objectives.py  objectives_v2.py  plotting.py  subgoal_generator.py
hjepa/plotting/: eigfuncs.py  reconstruction.py  utils.py  wall_heatmap.py
hjepa/probing/: evaluator.py
hjepa/test/: test_hjepa.py  test_integration.py  test_jepa.py  test_vicreg_loss.py  utils.py
pldm/: configs.py  download_ckpt_from_hf.py  eval_eigf_planning.py  logger.py  readme.md  requirements.txt  train.py  utils.py
scripts/: download_ckpt_from_hf.py  random_search_mani.py  random_search_wall.py
(+246 files in other folders)
