[tool.black]
line-length = 88

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hjepa"
version = "1.0.0"
requires-python = ">=3.8"
dynamic = ["description"]
packages = ["hjepa", "environments"]

[tool.ruff]
target-version = "py310"
line-length = 88
